# halo2_bench

./: Cargo.toml
anemoi/: Cargo.toml  run.sh
anemoi/src/: main.rs
mimc_pallas_hash/: Cargo.toml  run.sh
mimc_pallas_hash/src/: main.rs
mimc_vesta_hash/: Cargo.toml  run.sh
mimc_vesta_hash/src/: main.rs
poseidon/: Cargo.toml  run.sh
poseidon/src/: main.rs
